--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Ruby on Rails: Welcome aboard</title>
+<head>
+	<title>CareerGuide</title>
+	<link rel="stylesheet" href="assets/stylesheets/application.css">
+</head>
+	
+<body>
+  	<header>
+  		<h1> Welcome to the KCS Careers Evening site! </h1>
+  	</header>
+  	
+  	<p> Helping our students and career advisors to connect </p> <br><br>
+
+  	<section>
+  		<div> I am a student </div> <br>
+	</section>
+  	
+  	<section>
+  		<div> I am an advisor </div>
+  	</section>
+
   </body>
-</html>
+ </html>
