--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,13 @@
   	<p> Helping our students and career advisors to connect </p> <br><br>
 
   	<section>
-  		<div> I am a student </div> <br>
-	</section>
+  		<div> I am a student </div> <br><br>
+      <div> <a href= /students/ > View all students </a> </div> <br><br>
+	  </section>
   	
   	<section>
-  		<div> I am an advisor </div>
+  		<div> I am an advisor </div><br><br>
+      <div> <a href= /advisors/ > View all advisors </a> </div> <br><br>
   	</section>
 
   </body>
